[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Bubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Pin.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 512, 10 )

[node name="Main" type="Node"]

script/script = ExtResource( 1 )
Bubble = ExtResource( 2 )
max_bubble_cnt = 10

[node name="Wall-L" type="StaticBody2D" parent="."]

transform/pos = Vector2( -10, 300 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall-L"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Wall-R" type="StaticBody2D" parent="."]

transform/pos = Vector2( 1034, 300 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall-R"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Wall-T" type="StaticBody2D" parent="."]

transform/pos = Vector2( 512, -10 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall-T"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Wall-B" type="StaticBody2D" parent="."]

transform/pos = Vector2( 512, 610 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall-B"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Pin" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 512, 300 )

[node name="UI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="HUD" parent="UI" instance=ExtResource( 4 )]

[node name="SpawnTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="GameTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]


